exports[`test required indicator renders with defaults 1`] = `
<div
  data-radium={true}
  style={
    Object {
      "alignSelf": "center",
      "color": "#ffc0cb",
      "fontSize": "14px",
      "lineHeight": 1.285,
      "opacity": 1,
      "zIndex": 1,
    }
  }>
  *
</div>
`;

exports[`test required indicator renders with defaults 2`] = `
<div
  data-radium={true}
  style={
    Object {
      "alignSelf": "center",
      "color": "#ffc0cb",
      "fontSize": "14px",
      "lineHeight": 1.285,
      "opacity": 0,
      "zIndex": 1,
    }
  }>
  *
</div>
`;
